--- a/static/mobile_main.css
+++ b/static/mobile_main.css
@@ -7,6 +7,7 @@ html, body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 
 .block-top {
@@ -24,6 +25,7 @@ html, body {
 
 .curier {
     text-align: center;
+
     margin-bottom: -3%;
 }
 
@@ -581,8 +583,13 @@ input.brein {
 .uploaded-image {
     width: 50px;
     height: 50px;
+    border: 1px solid transparent;
+    border-radius: 10px;
 }
 
 .show-image .image-container {
-    display: inline-block;
+    display: flex;
+    float: left;
 }
+
+
