--- a/static/main_page.css
+++ b/static/main_page.css
@@ -692,7 +692,7 @@ button.rud:hover {
     font-size: 15px;
     width: 735px;
     font-weight: normal;
-    margin-left: 40%;
+    margin-left: 540px;
 }
 
 .pvz {
@@ -703,7 +703,7 @@ button.rud:hover {
     font-weight: normal;
     margin-left: 5px;
     overflow: scroll;
-    width: 300px;
+    width: 600px;
     white-space: nowrap;
 }
 
@@ -720,7 +720,7 @@ button.rud:hover {
     font-weight: normal;
     margin-left: 0;
     overflow-x: scroll;
-    width: 300px;
+    width: 600px;
     white-space: nowrap;
 }
 
@@ -738,4 +738,57 @@ button.rud:hover {
     margin-top: 60px;
     text-align: inline;
 }
+.block-new {
+  background-color: white;
+  width: 1050px;
+  margin-left: 3.8%;
+  color: rgba(244, 244, 248, 1);
+  border: 2px solid rgba(244, 244, 248, 1);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 1px;
+  padding-left: 30px;
+  margin-bottom: 15px;
+}
 
+.column {
+  color: black;
+  font-family: Montserrat, sans-serif;
+  font-size: 15px;
+  width: 20%;
+  font-weight: normal;
+  margin-left: -23px;
+  padding: 0 10px;
+}
+/*#textToCopy {*/
+/*    position: absolute;*/
+/*    left: -9999px;*/
+/*}*/
+
+.copy {
+    display: none;
+}
+
+.block-new-2 {
+  background-color:rgba(21, 24, 30, 1);
+  width: 1050px;
+  margin-left: 3.8%;
+  color: rgba(244, 244, 248, 1);
+  /*border: 2px solid rgba(244, 244, 248, 1);*/
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 1px;
+  padding-left: 30px;
+  margin-bottom: 15px;
+}
+.column-2 {
+  color: white;
+  font-family: Montserrat, sans-serif;
+  font-size: 15px;
+  width: 20%;
+  font-weight: normal;
+  margin-left: -23px;
+  padding: 0 10px;
+}
