--- a/templates/set_pvz.html
+++ b/templates/set_pvz.html
@@ -100,14 +100,13 @@ function redirectToMain() {
                         <div id="blocks-container" class="blockone">
                             <div class="opt">
                                 <div class="pvz">
-                                    <h1 class="check-text-adres">{{ el }}</h1>
+                                    <h1 class="check-text-adres">{{ el.adress }}</h1>
                                 </div>
                                 <div class="pvz-check">
-                                    <select name="" class="custom-option">
+                                    <select name="{{ el.id }}" class="custom-option">
                                         <option></option>
                                         {% for courier in couriers %}
-                                        <option>{{courier}}</option>
-                                        <option value="{{ courier.id }}">{{courier.name}}</option>
+                                        <option value="{{ courier.id }}">{{ courier.name }}</option>
                                         {% endfor %}
                                     </select>
                                 </div>
