--- a/static/send_courier.css
+++ b/static/send_courier.css
@@ -9,6 +9,7 @@ html, body {
 
 }
 
+
 .block-left {
     background-color: rgba(24, 32, 38, 1);
     width: 25%;
@@ -392,6 +393,8 @@ input:checked + .lab:before {
     font-family: Roboto, sans-serif;
     font-size: 15px;
     width: 735px;
+    margin-left: 35px;
+    margin-right: 165px;
     font-weight: normal;
 }
 
@@ -400,6 +403,7 @@ input:checked + .lab:before {
     font-family: Roboto, sans-serif;
     font-size: 15px;
     width: 735px;
+    margin-right: 90px;
     font-weight: normal;
 }
 
@@ -408,6 +412,7 @@ input:checked + .lab:before {
     font-family: Roboto, sans-serif;
     font-size: 15px;
     width: 735px;
+    margin-right: 25px;
     font-weight: normal;
 }
 
@@ -416,6 +421,7 @@ input:checked + .lab:before {
     font-family: Roboto, sans-serif;
     font-size: 15px;
     width: 735px;
+    margin-right: 55px;
     font-weight: normal;
 }
 
@@ -445,7 +451,7 @@ input:checked + .lab:before {
     font-size: 15px;
     width: 735px;
     font-weight: normal;
-    margin-left: 10%;
+    margin-left: 120px;
     margin-top: 60px;
 }
 
@@ -553,11 +559,11 @@ input:checked + .lab:before {
     /*position: sticky;*/
     position: relative;
     top: -15px;
-    margin-left: 100px;
+    margin-left: 80px;
     color: black;
     font-family: Montserrat, sans-serif;
     font-size: 15px;
-    width: 100px;
+    width: 400px;
     font-weight: normal;
 
 }
@@ -586,22 +592,72 @@ input:checked + .lab:before {
 
 
 .lol:before {
-    content: " ";
-    display: inline-block;
-    margin-right: 100px;
-    margin-left: 10px;
-    position: sticky;
-    width: 30px;
-    height: 30px;
-    margin-bottom: -30px;
-    background: white;
-    border: 2px solid rgba(21, 24, 30, 1);
-    border-radius: 13px;
-    vertical-align: middle;
+  content: " ";
+  /*display: inline-block;*/
+  margin-right: 10px;
+  position: sticky;
+  width: 20px;
+  height: 20px;
+  background: white;
+  border: 2px solid rgba(21, 24, 30, 1);
+  border-radius: 10px;
+  vertical-align: middle;
 }
 
 input:checked + .lol:before {
-    background-color: rgba(24, 32, 38, 1);
-    padding: -4px;
+  background-color: rgba(24, 32, 38, 1);
+  padding: -4px;
 }
 
+
+.container {
+  margin-top: 15px;
+}
+
+.block-new {
+  background-color: white;
+  width: 1050px;
+  margin-left: 3.8%;
+  color: rgba(244, 244, 248, 1);
+  border: 2px solid rgba(244, 244, 248, 1);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 1px;
+  padding-left: 30px;
+  margin-bottom: 15px;
+}
+
+.block-new-2 {
+  background-color:rgba(21, 24, 30, 1);
+  width: 1050px;
+  margin-left: 3.8%;
+  color: rgba(244, 244, 248, 1);
+  /*border: 2px solid rgba(244, 244, 248, 1);*/
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 1px;
+  padding-left: 30px;
+  margin-bottom: 15px;
+}
+
+.column {
+  color: black;
+  font-family: Montserrat, sans-serif;
+  font-size: 15px;
+  width: 20%;
+  font-weight: normal;
+  margin-left: -23px;
+  padding: 0 10px;
+}
+
+.column-2 {
+  color: white;
+  font-family: Montserrat, sans-serif;
+  font-size: 15px;
+  width: 20%;
+  font-weight: normal;
+  margin-left: -23px;
+  padding: 0 10px;
+}
