--- a/templates/mobile_menu.html
+++ b/templates/mobile_menu.html
@@ -7,28 +7,38 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>RATE-THIS</title>
-        <link rel="stylesheet" href="../static/mobile_main.css" />
+        <link rel="stylesheet" href="../static/mobile_menu.css" />
 
     </head>
     <body>
-        <div class="block-left">
-            <div class="head">
-                <h1 class="login">{{ login }}</h1>
-                <img class="Main" src="../static/logo.png">
+        <div class="for">
+            <div class="block-left">
+                <div class="head">
+                    <h1 class="login">oh no, cringe</h1>
+                    <img class="Main" src="../static/logo.png">
+                </div>
+                <div class="line"></div>
+    
+                <div class="commands">
+                    <div class="box1">
+                        <img class="box-img" src="../static/cargo.png">
+                        <h1 class="box-text">Курьер</h1>
+                    </div>
+                    <div class="box2">
+                        <img class="box-img" src="../static/cargo.png">
+                        <h1 class="box-text">Мне перевыдали</h1>
+                    </div>
+                </div>
             </div>
-            <div class="line"></div>
-            <div class="commands">
-                <div class="box1">
-                    <img class="box-img" src="../static/offer.png">
-                    <h1 class="box-text">Выдать товары</h1>
-                </div>
-                <div class="box2">
-                    <img class="box-img" src="../static/cargo.png">
-                    <h1 class="box-text">Курьер</h1>
-                </div>
-                <div class="box3">
-                    <img class="box-img" src="../static/house.png">
-                    <h1 class="box-text">Склад</h1>
+            <div class="container">
+                <div class="block-top">
+                    <div class="curier">
+                        <img class="lines" src="/static/lines.png">
+                        <h1 class="fill">Курьер</h1>
+                    </div>
+                    <div class="search">
+                        <input class="one" name="username" type="text" placeholder="Поиск" />
+                    </div>
                 </div>
             </div>
         </div>
