--- a/templates/mobile_problems.html
+++ b/templates/mobile_problems.html
@@ -26,8 +26,10 @@
                         произошло и прикрепите фото товара и его этикетки, как правильно сделать написанно в вопросе если он
                         есть, если вам его не выдают, то просто опишите информацию</h2>
                     <div class="data">
-                        <h1 class="foto">Прикрепите фото</h1>
-                        <img src="/static/vopr.png" id="showImageBtn">
+                        <div class="fot">
+                            <h1 class="foto">Прикрепите фото</h1>
+                            <img src="/static/vopr.png" id="showImageBtn">
+                        </div>
                         <div id="imagePopup" class="popup">
                             <img src="/static/one-block.png" alt="Popup Image">
                         </div>
@@ -37,8 +39,8 @@
                         </div>
                         <div class="foto-block">
                             <h1 class="foto">Заполните информацию</h1>
+                            <img src=" /static/vopr.png" id="showImageBtn1">
                             <div>
-                                <img src=" /static/vopr.png" id="showImageBtn1">
                                 <div id="imagePopup1" class="popup1">
                                     <img src="/static/two-block.png" alt="Popup Image">
                                 </div>
