--- a/static/mobile_main.css
+++ b/static/mobile_main.css
@@ -596,11 +596,51 @@ input.brein {
     position: fixed;
     top: 0;
     left: 0;
-    width: 60%;
+    width: 70%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* Прозрачный фон */
-    color: white;
+    background-color: #21272C;
+    color: #21272C;
     z-index: 9999; /* Выше, чем остальной контент */
     padding: 20px;
     box-sizing: border-box;
+}
+
+.box-img {
+    width: 38px;
+    height: 38px;
+    margin-top: 15px;
+    display: inline-block;
+}
+
+.box-text {
+    color: white;
+    font-family: Montserrat, sans-serif;
+    font-size: 20px;
+    font-weight: normal;
+    vertical-align: 12px;
+    display: inline-block;
+}
+
+.box1 {
+    margin-bottom: 5%;
+}
+
+.login {
+    color: white;
+    font-family: Montserrat, sans-serif;
+    font-size: 20px;
+    font-weight: normal;
+    display: inline-block;
+    vertical-align: 20px;
+    margin-left: 10%;
+}
+
+.Main {
+    width: 54px;
+    height: 54px;
+    display: inline-block;
+}
+
+.head {
+    margin-bottom: 15%;
 }
