--- a/templates/send_courier_err.html
+++ b/templates/send_courier_err.html
@@ -214,7 +214,7 @@ document.addEventListener("DOMContentLoaded", function() {
                         </div>
                         <button type="button" class="addBlockButton" id="addBlockButton">+</button>
                         <h2 class="fill_grid">Штатные курьеры:</h2>
-                        <div class="block-new">
+                        <div class="block-new-2">
                         <div class="column-2">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspФИО</div>
                         <div class="column-2">Авто</div>
                         <div class="column-2">Госс номер</div>
