added redirect to history_courier

--- a/templates/History_courier.html
+++ b/templates/History_courier.html
@@ -93,7 +93,7 @@ function redirectTO(path) {
                 <div class="text">
                     <h1 class="fill">История выездов курьеров</h1>
                     <div class="button">
-                        <button type="button" onclick="redirectTO('delivery/')">Назад</button>
+                        <button type="button" onclick="redirectToCourier()">Назад</button>
                     </div>
                     <h2 class="fill_grade">В данном разделе вы можете посмотреть историю выездов курьеров</h2>
                 </div>
