--- a/static/delivery_detail1.css
+++ b/static/delivery_detail1.css
@@ -1,4 +1,7 @@
-
+@font-face {
+    font-family: 'Monserrat';
+    src: url('https://fonts.googleapis.com/css2?family=Montserrat');
+}
 
 html, body {
     margin: 0;
