--- a/static/information.css
+++ b/static/information.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'Roboto';
-    src: url('https://fonts.googleapis.com/css2?family=Roboto');
+    font-family: 'Montserrat';
+    src: url('https://fonts.googleapis.com/css2?family=Montserrat');
 }
 
 @font-face {
@@ -33,7 +33,7 @@ html, body {
 
 .login {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 20px;
     font-weight: normal;
 }
@@ -46,7 +46,7 @@ h1 {
 
 .id {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 20px;
     font-weight: normal;
 }
@@ -65,7 +65,7 @@ h1 {
 
 .fill {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 50px;
     font-weight: bold;
 }
@@ -77,7 +77,7 @@ h1 {
 
 .fill_grade {
     color: #95E6D6;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 25px;
     width: 735px;
     font-weight:900;
@@ -95,7 +95,7 @@ h1 {
     color: black;
     line-height: 30.48px;
     font-weight: bold;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 25px;
     padding: auto;
     text-decoration: none;
@@ -132,7 +132,7 @@ h1 {
 
 .box-text {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 20px;
     font-weight: normal;
     vertical-align: 5px;
@@ -140,7 +140,7 @@ h1 {
 
 .but {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 20px;
     width: 735px;
     font-weight: normal;
@@ -150,7 +150,7 @@ h1 {
 
 .bet {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 20px;
     width: 735px;
     font-weight: normal;
@@ -159,7 +159,7 @@ h1 {
 }
 .bat {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 20px;
     width: 735px;
     font-weight: normal;
@@ -184,7 +184,7 @@ h1 {
 
 .fio {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -194,7 +194,7 @@ h1 {
 
 .charge {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -204,7 +204,7 @@ h1 {
 
 .number {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -214,7 +214,7 @@ h1 {
 
 .where {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -225,7 +225,7 @@ h1 {
 
 .fio-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -234,7 +234,7 @@ h1 {
 
 .charge-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -243,7 +243,7 @@ h1 {
 
 .number-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -252,7 +252,7 @@ h1 {
 
 .where-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -273,7 +273,7 @@ h1 {
     margin-right: 10px;
     margin-top: -27px;
     padding: auto;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     color: black;
     font-weight: normal;
@@ -288,7 +288,7 @@ h1 {
 
 .fill_grad {
     color: #F17D7D;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 25px;
     width: 650px;
     font-weight:900;
@@ -312,7 +312,7 @@ h1 {
 
 .txt-id {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -322,7 +322,7 @@ h1 {
 
 .txt-foto {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -332,7 +332,7 @@ h1 {
 
 .txt-articul {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -342,7 +342,7 @@ h1 {
 
 .txt-size {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -352,7 +352,7 @@ h1 {
 
 .txt-datebye {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -362,7 +362,7 @@ h1 {
 
 .txt-dategive {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -372,7 +372,7 @@ h1 {
 
 .txt-nomer {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -382,7 +382,7 @@ h1 {
 
 .txt-name {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -392,7 +392,7 @@ h1 {
 
 .txt-price {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -402,7 +402,7 @@ h1 {
 
 .txt-task {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -432,7 +432,7 @@ h1 {
 
 .id-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -449,7 +449,7 @@ h1 {
 
 .articul-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -459,7 +459,7 @@ h1 {
 
 .size-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -469,7 +469,7 @@ h1 {
 
 .datebye-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -479,7 +479,7 @@ h1 {
 
 .dategive-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -489,7 +489,7 @@ h1 {
 
 .nomer-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -499,7 +499,7 @@ h1 {
 
 .name-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -509,7 +509,7 @@ h1 {
 
 .price-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -519,7 +519,7 @@ h1 {
 
 .task-block {
     color: black;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 100px;
     font-weight: normal;
@@ -566,7 +566,7 @@ h1 {
     color: black;
     line-height: 30.48px;
     font-weight: bold;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 25px;
     padding: auto;
     text-decoration: none;
@@ -585,7 +585,7 @@ h1 {
     color: black;
     line-height: 30.48px;
     font-weight: bold;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 25px;
     padding: auto;
     text-decoration: none;
@@ -605,7 +605,7 @@ h1 {
     color: black;
     line-height: 30.48px;
     font-weight: bold;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 25px;
     padding: auto;
     text-decoration: none;
@@ -645,7 +645,7 @@ h1 {
 
 .inf {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: bold;
@@ -656,7 +656,7 @@ h1 {
 
 .inf1 {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -666,7 +666,7 @@ h1 {
 
 .inf2 {
     color: #95E6D6;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -676,7 +676,7 @@ h1 {
 
 .inf3 {
     color: #FF5858;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 15px;
     width: 735px;
     font-weight: normal;
@@ -702,7 +702,7 @@ h1 {
     color: black;
     line-height: 30.48px;
     font-weight: bold;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 25px;
     padding: auto;
     text-decoration: none;
@@ -721,7 +721,7 @@ h1 {
     border-radius: 20px;
     color: black;
     font-weight: bold;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 18px;
     padding-left: 30px;
     padding-right: 30px;
@@ -745,7 +745,7 @@ h1 {
 
 .table-txt {
     color: white;
-    font-family: Roboto, sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 25px;
     width: 650px;
     font-weight:900;
