--- a/static/mobile_auth.css
+++ b/static/mobile_auth.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Monserrat';
+    src: url('https://fonts.googleapis.com/css2?family=Montserrat');
+}
+
 body {
     background-color: #95E6D6;
 }
