--- a/static/mobile_menu.css
+++ b/static/mobile_menu.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Monserrat';
+    src: url('https://fonts.googleapis.com/css2?family=Montserrat');
+}
+
 html, body {
     margin: 0;
     padding: 0;
