--- a/templates/delivery_detail.html
+++ b/templates/delivery_detail.html
@@ -11,7 +11,7 @@
   <script>
 function redirectToCourier() {
     // Get the current URL path
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/courier";
@@ -21,7 +21,7 @@ function redirectToCourier() {
 }
 function redirectToDelivery() {
     // Get the current URL path
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/delivery";
@@ -31,7 +31,7 @@ function redirectToDelivery() {
 }
 function redirectToWare() {
 
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/warehouse";
@@ -41,7 +41,7 @@ function redirectToWare() {
 }
 function redirectToMain() {
 
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/";
