--- a/templates/set_data.html
+++ b/templates/set_data.html
@@ -14,7 +14,7 @@
 <script>
 function redirectToCourier() {
     // Get the current URL path
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/courier";
@@ -24,7 +24,7 @@ function redirectToCourier() {
 }
 function redirectToDelivery() {
     // Get the current URL path
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/delivery";
@@ -34,7 +34,7 @@ function redirectToDelivery() {
 }
 function redirectToWare() {
 
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/warehouse";
@@ -44,7 +44,7 @@ function redirectToWare() {
 }
 function redirectToMain() {
 
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/";
