--- a/templates/set_pvz.html
+++ b/templates/set_pvz.html
@@ -14,7 +14,7 @@
 <script>
 function redirectToCourier() {
     // Get the current URL path
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/courier";
@@ -24,7 +24,7 @@ function redirectToCourier() {
 }
 function redirectToDelivery() {
     // Get the current URL path
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/delivery";
@@ -34,7 +34,7 @@ function redirectToDelivery() {
 }
 function redirectToWare() {
 
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/warehouse";
@@ -44,7 +44,7 @@ function redirectToWare() {
 }
 function redirectToMain() {
 
-    var currentPath = 'http://127.0.0.1:8000'
+    var currentPath = window.location.origin
 
     // Append "/contest" to the current path
     var newUrl = currentPath + "/";
@@ -85,7 +85,7 @@ function redirectToMain() {
                     <div class="text">
                         <h1 class="fill">Курьер</h1>
                         <div class="butt-one">
-                            <button type="button" class="ruf">Назад</button>
+                            <button onclick="redirectToCourier()" type="button" class="ruf">Назад</button>
                             <h1 class="but">Курьер</h1>
                             <h1 class="bet">/</h1>
                             <h1 class="bat">Отправить курьера</h1>
