added button back

--- a/templates/send_courier.html
+++ b/templates/send_courier.html
@@ -182,7 +182,7 @@ document.addEventListener("DOMContentLoaded", function() {
                     <div class="text">
                         <h1 class="fill">Курьер</h1>
                         <div class="butt-one">
-                            <button type="button" class="ruf">Назад</button>
+                            <button onclick="redirectToCourier()" type="button" class="ruf">Назад</button>
                             <h1 class="but">Курьер</h1>
                             <h1 class="bet">/</h1>
                             <h1 class="bat">Отправить курьера</h1>
