--- a/templates/History_courier.html
+++ b/templates/History_courier.html
@@ -99,7 +99,7 @@ function redirectTO(path) {
                 </div>
                 <h1 class="date">Дата выезда</h1>
                 <h1 class="charge">Кол-во курьеров</h1>
-                <h1 class="status">Статус</h1>
+                <h1 class="status1">Статус</h1>
                 {% for el in rows %}
                 <div onclick="redirectTO('{{ el.redirect_url|escapejs }}')" class="block">
                     <img class="arrow" src="../static/Vector 14.png">
